Status de Task sendo alterada com sucesso